# CG_work

./: .gitignore  API对接.md  CMakeLists.txt  README.md  imgui.ini  rebuild.ps1  setup_dependencies.ps1
assets/: CMakeLists.txt  VdbToRaw.cpp
include/: Camera.h  Renderer.h  Shader.h  Types.h  VolumeData.h
shaders/: raymarching.frag
src/: Camera.cpp  Renderer.cpp  Shader.cpp  VolumeData.cpp  main.cpp
